<resources>
    <string name="app_name">MedFC for Patient</string>
    <string name="account_type" translatable="false">com.example.reico_000.prescriptionreadernfc.account</string>
    <string name="provider_authority" translatable="false">com.example.reico_000.prescriptionreadernfc.provider</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="title_section0">Home</string>
    <string name="title_section1">Scan Medication</string>
    <string name="title_section2">Medication List</string>
    <string name="title_section3">Prescription Date List</string>
    <string name="title_section4">Symptoms History</string>
    <string name="title_section5" translatable="false">Medication Adherence</string>
    <string name="title_section6">Medication Use History</string>
    <string name="title_section7">More Medication Info</string>
    <string name="title_section8">Report Symptoms</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_legends">Legends</string>
    <string name="action_legends2">Tips</string>
    <string name="action_report">Report Symptoms</string>
    <string name="medication_reminder">Medication Reminder</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="logout_confirmation_text">Do you wish to logout?</string>
    <string name="logout_success">Logout successful</string>
    <string name="termsAndConds_title">Terms and Conditions</string>
    <string name="medication_already_taken">Medication Already Taken</string>
    <string name="medication_already_taken_text">You have already taken your medication for today</string>
    <string name="medication_course_completed">Medication Course Completed</string>
    <string name="medication_course_completed_text">Medication Consumption Completed&lt;br>Medication Deleted from Inventory&lt;br>Do you want to erase the NFC tag data?</string>
    <string name="consumption_success">Consumption Successful!</string>
    <string name="consumption_success_text">Medication Consumed!</string>
    <string name="unit">\u0020unit</string>
    <string name="to_go">\u0020to go</string>
    <string name="error">Error</string>
    <string name="error_text">Medication does not exist in Inventory</string>
    <string name="error_text2">"Error: Please Scan Medication"</string>
    <string name="delete_tag">Please scan the tag to be deleted</string>
    <string name="erasing_tag1">Erasing tag finished</string>
    <string name="erasing_tag2">Erasing tag data finished, you can now remove the tag</string>
    <string name="cleared_tag1">NFC Tag Cleared</string>
    <string name="cleared_tag2">The data inside NFC tag has been cleared</string>
    <string name="unwritable_tag">Tag is not writable</string>
    <string name="action_logout">Logout</string>
    <string name="action_scanItem1" translatable="false">Scan Item 1</string>
    <string name="action_scanItem2" translatable="false">Scan Item 2</string>
    <string name="action_scanItem3" translatable="false">Scan Item 3</string>
    <string name="action_showNotification">Show Notification</string>
    <string name="action_eraseTagData">Erase Tag Data</string>
    <string name="action_loadStubConsumption">Load Stub Consumption</string>
    <string name="action_termsAndConds">Terms And Conditions</string>
    <string name="action_getConsumption1">Get Consumption 1</string>
    <string name="action_getConsumption2">Get Consumption 2</string>
    <string name="action_changeReminderTiming">Change Reminder Timing</string>
    <string name="action_stopTakingMedicine">Stop Taking Medication</string>
    <string name="action_showMoreInfo">Show More Info</string>
    <string name="action_scanMedication">Scan Medication</string>
    <string name="action_viewOrEditRemarks">View/Edit Remarks</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout" translatable="false">LOGOUT</string>
    <string name="name" translatable="false">Fullname</string>
    <string name="symptom1">Nausea and Vomiting</string>
    <string name="symptom2">Diarrhea</string>
    <string name="symptom3">Constipation</string>
    <string name="severitylevel1">Mild</string>
    <string name="severitylevel2">Moderate</string>
    <string name="severitylevel3">Severe</string>
    <string name="severitylevel4">Very Severe</string>
    <string name="hint_symptoms">Symptoms to Report</string>
    <string name="comment">Comment: </string>
    <string name="commonsymptom"><b>Common Symptoms</b></string>
    <string name="severitylevel"><b>Severity Levels</b></string>
    <string name="submit">Submit</string>
    <string name="medicine_A1" translatable="false"><u>Abiraterone</u></string>
    <string name="medicine_A2" translatable="false"><u>Afatinib</u></string>
    <string name="medicine_A3" translatable="false"><u>Alendronate</u></string>
    <string name="medicine_A4" translatable="false"><u>Alitretinoin</u></string>
    <string name="medicine_A5" translatable="false"><u>Anastrozole</u></string>
    <string name="url_A1" translatable="false">https://onco-informatics.com/medfc/pdf/Abiraterone%20250mg.pdf</string>
    <string name="url_A2" translatable="false">https://onco-informatics.com/medfc/pdf/Afatinib%2030mg.pdf</string>
    <string name="url_A3" translatable="false">https://onco-informatics.com/medfc/pdf/Alendronate.pdf</string>
    <string name="url_A4" translatable="false">https://onco-informatics.com/medfc/pdf/Alitretinoin.pdf</string>
    <string name="url_A5" translatable="false">https://onco-informatics.com/medfc/pdf/Anastrozole%201mg.pdf</string>
    <string name="medicine_B1" translatable="false"><u>Bicalutamide</u></string>
    <string name="url_B1" translatable="false">https://onco-informatics.com/medfc/pdf/Bicalutamide%2050mg.pdf</string>
    <string name="medicine_C1" translatable="false"><u>Capecitabine</u></string>
    <string name="medicine_C2" translatable="false"><u>Ceritinib</u></string>
    <string name="medicine_C3" translatable="false"><u>Chlorambucil</u></string>
    <string name="medicine_C4" translatable="false"><u>Crizotinib</u></string>
    <string name="medicine_C5" translatable="false"><u>Cyclophosphamide</u></string>
    <string name="url_C1" translatable="false">https://onco-informatics.com/medfc/pdf/Capecitabine.pdf</string>
    <string name="url_C2" translatable="false">https://onco-informatics.com/medfc/pdf/Ceritinib%20150mg</string>
    <string name="url_C3" translatable="false">https://onco-informatics.com/medfc/pdf/Chlorambucil.pdf</string>
    <string name="url_C4" translatable="false">https://onco-informatics.com/medfc/pdf/Crizotinib%20200mg.pdf</string>
    <string name="url_C5" translatable="false">https://onco-informatics.com/medfc/pdf/Cyclophosphamide.pdf</string>
    <string name="medicine_D1" translatable="false"><u>Degarelix</u></string>
    <string name="medicine_D2" translatable="false"><u>Dexamethasone Mouthwash</u></string>
    <string name="url_D1" translatable="false">https://onco-informatics.com/medfc/pdf/Degarelix.pdf</string>
    <string name="url_D2" translatable="false">https://onco-informatics.com/medfc/pdf/DexamethasoneMouthwash.pdf</string>
    <string name="medicine_E1" translatable="false"><u>Enoxaparin</u></string>
    <string name="medicine_E2" translatable="false"><u>Enzalutamide</u></string>
    <string name="medicine_E3" translatable="false"><u>Erlotinib</u></string>
    <string name="medicine_E4" translatable="false"><u>Erythropoietin</u></string>
    <string name="medicine_E5" translatable="false"><u>Estramustine</u></string>
    <string name="medicine_E6" translatable="false"><u>Etoposide</u></string>
    <string name="medicine_E7" translatable="false"><u>Everolimus</u></string>
    <string name="medicine_E8" translatable="false"><u>Exemestane</u></string>
    <string name="url_E1" translatable="false">https://onco-informatics.com/medfc/pdf/Enoxaparin.pdf</string>
    <string name="url_E2" translatable="false">https://onco-informatics.com/medfc/pdf/Enzalutamide%20100mg.pdf</string>
    <string name="url_E3" translatable="false">https://onco-informatics.com/medfc/pdf/Erlotinib%20150mg.pdf</string>
    <string name="url_E4" translatable="false">https://onco-informatics.com/medfc/pdf/Erythropoietin.pdf</string>
    <string name="url_E5" translatable="false">https://onco-informatics.com/medfc/pdf/Estramustine.pdf</string>
    <string name="url_E6" translatable="false">https://onco-informatics.com/medfc/pdf/EtoposideOral.pdf</string>
    <string name="url_E7" translatable="false">https://onco-informatics.com/medfc/pdf/Everolimus%205mg.pdf</string>
    <string name="url_E8" translatable="false">https://onco-informatics.com/medfc/pdf/Exemestane%2025mg.pdf</string>
    <string name="medicine_F1" translatable="false"><u>Fentanyl Patch</u></string>
    <string name="medicine_F2" translatable="false"><u>Filgrastim</u></string>
    <string name="medicine_F3" translatable="false"><u>Finasteride</u></string>
    <string name="medicine_F4" translatable="false"><u>Fludarabine</u></string>
    <string name="medicine_F5" translatable="false"><u>Fluorouracil</u></string>
    <string name="medicine_F6" translatable="false"><u>Flutamide</u></string>
    <string name="url_F1" translatable="false">https://onco-informatics.com/medfc/pdf/FentanylPatchCombined.pdf</string>
    <string name="url_F2" translatable="false">https://onco-informatics.com/medfc/pdf/Filgrastim.pdf</string>
    <string name="enable_reminder">Enable reminder</string>
    <string name="enable_reminder_text">Turning this off will disable the medication consumption reminder</string>
    <string name="vibrate_on_reminder">Vibrate the phone when reminder pops up</string>
    <string name="vibrate_on_reminder_text">Turning this off will cause the phone to not vibrate when the reminder pops up</string>
    <string name="sound_on_reminder">Play a sound when reminder pops up</string>
    <string name="sound_on_reminder_text">Turning this off will cause the phone to not play any sound when the reminder pops up</string>
    <string name="read_info">Read out medication info</string>
    <string name="read_info_text">Reads out the medication info when tapping a tag</string>
    <string name="brand_name">Brand Name:</string>
    <string name="generic_name">Generic Name:</string>
    <string name="indications">Indications:</string>
    <string name="dosage">Dosage:</string>
    <string name="administration">Administration:</string>
    <string name="contraindications">Contraindications:</string>
    <string name="special_precautions">Special Precautions:</string>
    <string name="adverse_drug_reactions">Adverse Drug Reactions:</string>
    <string name="drug_interactions">Drug Interactions:</string>
    <string name="pregnancy_category">Pregnancy Category (US FDA):</string>
    <string name="pdf_leaflet">PDF Leaflet:</string>
    <string name="scan_medicine">Scan Medication</string>
    <string name="medication_list">Medication List</string>
    <string name="report_symptom">Report Symptoms</string>
    <string name="past_symptom_record">Symptoms History</string>
    <string name="medication_use_record">Medication Use History</string>
</resources>